T4-Compiladores/target/generated-sources/antlr4/br/ufscar/dc/compiladores/GramaticaParser.java
// Generated from br/ufscar/dc/compiladores/Gramatica.g4 by ANTLR 4.7.2
package br.ufscar.dc.compiladores;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, DELIM_RECEITA=23, CAMPO_MEDICO=24, 
		CAMPO_PACIENTE=25, CAMPO_REMEDIO=26, CAMPO_RECOMENDACAO=27, CAMPO_ASSINATURA=28, 
		CAMPO_DATA=29, NUM_INT=30, CADEIA=31, COMENTARIO=32, WS=33, DELIM=34, 
		SEPARADOR=35;
	public static final int
		RULE_receita = 0, RULE_medico = 1, RULE_paciente = 2, RULE_remedios = 3, 
		RULE_remedio = 4, RULE_recomendacoes = 5, RULE_nomeMedico = 6, RULE_ruaMedico = 7, 
		RULE_numeroMedico = 8, RULE_bairroMedico = 9, RULE_cidadeMedico = 10, 
		RULE_estadoMedico = 11, RULE_telefoneMedico = 12, RULE_crmMedico = 13, 
		RULE_nomePaciente = 14, RULE_ruaPaciente = 15, RULE_numeroPaciente = 16, 
		RULE_cidadePaciente = 17, RULE_estadoPaciente = 18, RULE_nomeRemedio = 19, 
		RULE_dosagem = 20, RULE_numeroComprimidos = 21, RULE_numeroCaixas = 22, 
		RULE_prescricaoQtde = 23, RULE_prescricaoHoras = 24, RULE_prescricaoDias = 25, 
		RULE_recomendacao = 26, RULE_assinatura = 27, RULE_data = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"receita", "medico", "paciente", "remedios", "remedio", "recomendacoes", 
			"nomeMedico", "ruaMedico", "numeroMedico", "bairroMedico", "cidadeMedico", 
			"estadoMedico", "telefoneMedico", "crmMedico", "nomePaciente", "ruaPaciente", 
			"numeroPaciente", "cidadePaciente", "estadoPaciente", "nomeRemedio", 
			"dosagem", "numeroComprimidos", "numeroCaixas", "prescricaoQtde", "prescricaoHoras", 
			"prescricaoDias", "recomendacao", "assinatura", "data"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'inicio_receita'", "'fim_receita'", "'nome_medico'", "'rua_medico'", 
			"'numero_medico'", "'bairro_medico'", "'cidade_medico'", "'estado_medico'", 
			"'telefone_medico'", "'crm_medico'", "'nome_paciente'", "'rua_paciente'", 
			"'numero_paciente'", "'cidade_paciente'", "'estado_paciente'", "'nome_remedio'", 
			"'dosagem'", "'numero_comprimidos'", "'numero_caixas'", "'prescricao_qtde'", 
			"'prescricao_horas'", "'prescricao_dias'", null, null, null, null, "'recomendacao'", 
			"'assinatura'", "'data'", null, null, null, null, "':'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "DELIM_RECEITA", 
			"CAMPO_MEDICO", "CAMPO_PACIENTE", "CAMPO_REMEDIO", "CAMPO_RECOMENDACAO", 
			"CAMPO_ASSINATURA", "CAMPO_DATA", "NUM_INT", "CADEIA", "COMENTARIO", 
			"WS", "DELIM", "SEPARADOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ReceitaContext extends ParserRuleContext {
		public MedicoContext medico() {
			return getRuleContext(MedicoContext.class,0);
		}
		public PacienteContext paciente() {
			return getRuleContext(PacienteContext.class,0);
		}
		public RemediosContext remedios() {
			return getRuleContext(RemediosContext.class,0);
		}
		public RecomendacoesContext recomendacoes() {
			return getRuleContext(RecomendacoesContext.class,0);
		}
		public AssinaturaContext assinatura() {
			return getRuleContext(AssinaturaContext.class,0);
		}
		public DataContext data() {
			return getRuleContext(DataContext.class,0);
		}
		public ReceitaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_receita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterReceita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitReceita(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitReceita(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReceitaContext receita() throws RecognitionException {
		ReceitaContext _localctx = new ReceitaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_receita);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			medico();
			setState(60);
			paciente();
			setState(61);
			remedios();
			setState(62);
			recomendacoes();
			setState(63);
			assinatura();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CAMPO_DATA) {
				{
				setState(64);
				data();
				}
			}

			setState(67);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MedicoContext extends ParserRuleContext {
		public NomeMedicoContext nomeMedico() {
			return getRuleContext(NomeMedicoContext.class,0);
		}
		public RuaMedicoContext ruaMedico() {
			return getRuleContext(RuaMedicoContext.class,0);
		}
		public NumeroMedicoContext numeroMedico() {
			return getRuleContext(NumeroMedicoContext.class,0);
		}
		public BairroMedicoContext bairroMedico() {
			return getRuleContext(BairroMedicoContext.class,0);
		}
		public CidadeMedicoContext cidadeMedico() {
			return getRuleContext(CidadeMedicoContext.class,0);
		}
		public EstadoMedicoContext estadoMedico() {
			return getRuleContext(EstadoMedicoContext.class,0);
		}
		public TelefoneMedicoContext telefoneMedico() {
			return getRuleContext(TelefoneMedicoContext.class,0);
		}
		public CrmMedicoContext crmMedico() {
			return getRuleContext(CrmMedicoContext.class,0);
		}
		public MedicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_medico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterMedico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitMedico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitMedico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MedicoContext medico() throws RecognitionException {
		MedicoContext _localctx = new MedicoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_medico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			nomeMedico();
			setState(70);
			ruaMedico();
			setState(71);
			numeroMedico();
			setState(72);
			bairroMedico();
			setState(73);
			cidadeMedico();
			setState(74);
			estadoMedico();
			setState(75);
			telefoneMedico();
			setState(76);
			crmMedico();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PacienteContext extends ParserRuleContext {
		public NomePacienteContext nomePaciente() {
			return getRuleContext(NomePacienteContext.class,0);
		}
		public RuaPacienteContext ruaPaciente() {
			return getRuleContext(RuaPacienteContext.class,0);
		}
		public NumeroPacienteContext numeroPaciente() {
			return getRuleContext(NumeroPacienteContext.class,0);
		}
		public CidadePacienteContext cidadePaciente() {
			return getRuleContext(CidadePacienteContext.class,0);
		}
		public EstadoPacienteContext estadoPaciente() {
			return getRuleContext(EstadoPacienteContext.class,0);
		}
		public PacienteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paciente; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterPaciente(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitPaciente(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitPaciente(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PacienteContext paciente() throws RecognitionException {
		PacienteContext _localctx = new PacienteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_paciente);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			nomePaciente();
			setState(79);
			ruaPaciente();
			setState(80);
			numeroPaciente();
			setState(81);
			cidadePaciente();
			setState(82);
			estadoPaciente();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RemediosContext extends ParserRuleContext {
		public List<RemedioContext> remedio() {
			return getRuleContexts(RemedioContext.class);
		}
		public RemedioContext remedio(int i) {
			return getRuleContext(RemedioContext.class,i);
		}
		public List<TerminalNode> SEPARADOR() { return getTokens(GramaticaParser.SEPARADOR); }
		public TerminalNode SEPARADOR(int i) {
			return getToken(GramaticaParser.SEPARADOR, i);
		}
		public RemediosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_remedios; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterRemedios(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitRemedios(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitRemedios(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RemediosContext remedios() throws RecognitionException {
		RemediosContext _localctx = new RemediosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_remedios);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			remedio();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEPARADOR) {
				{
				{
				setState(85);
				match(SEPARADOR);
				setState(86);
				remedio();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RemedioContext extends ParserRuleContext {
		public NomeRemedioContext nomeRemedio() {
			return getRuleContext(NomeRemedioContext.class,0);
		}
		public DosagemContext dosagem() {
			return getRuleContext(DosagemContext.class,0);
		}
		public NumeroComprimidosContext numeroComprimidos() {
			return getRuleContext(NumeroComprimidosContext.class,0);
		}
		public NumeroCaixasContext numeroCaixas() {
			return getRuleContext(NumeroCaixasContext.class,0);
		}
		public PrescricaoQtdeContext prescricaoQtde() {
			return getRuleContext(PrescricaoQtdeContext.class,0);
		}
		public PrescricaoHorasContext prescricaoHoras() {
			return getRuleContext(PrescricaoHorasContext.class,0);
		}
		public PrescricaoDiasContext prescricaoDias() {
			return getRuleContext(PrescricaoDiasContext.class,0);
		}
		public RemedioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_remedio; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterRemedio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitRemedio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitRemedio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RemedioContext remedio() throws RecognitionException {
		RemedioContext _localctx = new RemedioContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_remedio);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			nomeRemedio();
			setState(93);
			dosagem();
			setState(94);
			numeroComprimidos();
			setState(95);
			numeroCaixas();
			setState(96);
			prescricaoQtde();
			setState(97);
			prescricaoHoras();
			setState(98);
			prescricaoDias();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecomendacoesContext extends ParserRuleContext {
		public List<RecomendacaoContext> recomendacao() {
			return getRuleContexts(RecomendacaoContext.class);
		}
		public RecomendacaoContext recomendacao(int i) {
			return getRuleContext(RecomendacaoContext.class,i);
		}
		public List<TerminalNode> SEPARADOR() { return getTokens(GramaticaParser.SEPARADOR); }
		public TerminalNode SEPARADOR(int i) {
			return getToken(GramaticaParser.SEPARADOR, i);
		}
		public RecomendacoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recomendacoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterRecomendacoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitRecomendacoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitRecomendacoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecomendacoesContext recomendacoes() throws RecognitionException {
		RecomendacoesContext _localctx = new RecomendacoesContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_recomendacoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			recomendacao();
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEPARADOR) {
				{
				{
				setState(101);
				match(SEPARADOR);
				setState(102);
				recomendacao();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NomeMedicoContext extends ParserRuleContext {
		public TerminalNode DELIM() { return getToken(GramaticaParser.DELIM, 0); }
		public TerminalNode CADEIA() { return getToken(GramaticaParser.CADEIA, 0); }
		public NomeMedicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nomeMedico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterNomeMedico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitNomeMedico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitNomeMedico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NomeMedicoContext nomeMedico() throws RecognitionException {
		NomeMedicoContext _localctx = new NomeMedicoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nomeMedico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(T__2);
			setState(109);
			match(DELIM);
			setState(110);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuaMedicoContext extends ParserRuleContext {
		public TerminalNode DELIM() { return getToken(GramaticaParser.DELIM, 0); }
		public TerminalNode CADEIA() { return getToken(GramaticaParser.CADEIA, 0); }
		public RuaMedicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruaMedico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterRuaMedico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitRuaMedico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitRuaMedico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuaMedicoContext ruaMedico() throws RecognitionException {
		RuaMedicoContext _localctx = new RuaMedicoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ruaMedico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__3);
			setState(113);
			match(DELIM);
			setState(114);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumeroMedicoContext extends ParserRuleContext {
		public TerminalNode DELIM() { return getToken(GramaticaParser.DELIM, 0); }
		public TerminalNode NUM_INT() { return getToken(GramaticaParser.NUM_INT, 0); }
		public NumeroMedicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeroMedico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterNumeroMedico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitNumeroMedico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitNumeroMedico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumeroMedicoContext numeroMedico() throws RecognitionException {
		NumeroMedicoContext _localctx = new NumeroMedicoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_numeroMedico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__4);
			setState(117);
			match(DELIM);
			setState(118);
			match(NUM_INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BairroMedicoContext extends ParserRuleContext {
		public TerminalNode DELIM() { return getToken(GramaticaParser.DELIM, 0); }
		public TerminalNode CADEIA() { return getToken(GramaticaParser.CADEIA, 0); }
		public BairroMedicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bairroMedico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterBairroMedico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitBairroMedico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitBairroMedico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BairroMedicoContext bairroMedico() throws RecognitionException {
		BairroMedicoContext _localctx = new BairroMedicoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_bairroMedico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__5);
			setState(121);
			match(DELIM);
			setState(122);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CidadeMedicoContext extends ParserRuleContext {
		public TerminalNode DELIM() { return getToken(GramaticaParser.DELIM, 0); }
		public TerminalNode CADEIA() { return getToken(GramaticaParser.CADEIA, 0); }
		public CidadeMedicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cidadeMedico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterCidadeMedico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitCidadeMedico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitCidadeMedico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CidadeMedicoContext cidadeMedico() throws RecognitionException {
		CidadeMedicoContext _localctx = new CidadeMedicoContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cidadeMedico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(T__6);
			setState(125);
			match(DELIM);
			setState(126);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstadoMedicoContext extends ParserRuleContext {
		public TerminalNode DELIM() { return getToken(GramaticaParser.DELIM, 0); }
		public TerminalNode CADEIA() { return getToken(GramaticaParser.CADEIA, 0); }
		public EstadoMedicoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estadoMedico; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).enterEstadoMedico(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramaticaListener ) ((GramaticaListener)listener).exitEstadoMedico(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramaticaVisitor ) return ((GramaticaVisitor<? extends T>)visitor).visitEstadoMedico(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EstadoMedicoContext estadoMedico() throws RecognitionException {
		EstadoMedicoContext _localctx = new EstadoMedicoContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_estadoMedico);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(T__7);
			setState(129);
			match(DELIM);
			setState(130);
			match(CADEIA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
